--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:2.0.7'
     implementation 'org.hibernate.orm:hibernate-community-dialects'
     implementation 'org.projectlombok:lombok:1.18.28'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.6'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
